# swagger-output.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "1.0.0",
     "title": "Horas de Servicio API",
-    "description": "Demo API para curso de React y Node.js"
+    "description": "This API provides endpoints for managing service hours, user authentication, and various other functionalities for the Horas de Servicio application. It is built using Next.js and Node.js. The API is RESTful and all endpoints are documented here.\n\n Test accounts:\n Admin: admin@service.com\n Controller: controller@service.com\n Recruiter: recruiter@service.com\n Student: student@services.com \n\n Password: Funval2024"
   },
   "host": "localhost:3000/api/v1",
   "basePath": "/",
@@ -823,10 +823,6 @@
                       "example": 1
                     },
                     "country_id": {
-                      "type": "number",
-                      "example": 1
-                    },
-                    "level_id": {
                       "type": "number",
                       "example": 1
                     }
